--- a/webapp/public/style.css
+++ b/webapp/public/style.css
@@ -345,7 +345,7 @@ h5 {
     background: linear-gradient(
         to right bottom,
         rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.3)
+        rgba(255, 255, 255, 0.2)
     );
     backdrop-filter: blur(2rem);
 }
@@ -513,8 +513,8 @@ h5 {
 .deco-container-1 {
     display: flex;
     justify-content: left;
-    position:relative;
-    color:var(--lightergrey);
+    position: relative;
+    color: var(--lightergrey);
     margin: 0px 5px 5px 0px;
     width: 100%;
     height: 35px;
@@ -608,12 +608,31 @@ h5 {
     border-color: white;
 }
 
+
+.deco-white-border-hover {
+    transition: 0.1s;
+    border-color: transparent;
+    border-radius: 2px;
+}
+
+.deco-white-border-hover:hover {
+    border-radius: 5px;
+    border-color: var(--hightlightblue);
+    border-style: solid;
+    border-width: 2px;
+    cursor: pointer;
+}
+
+.deco-white-border-hover:active {
+    border-color: white;
+}
+
 .select-equipment-no-armor {
     margin-top: 3px;
 }
 
 .stat-item-container {
-    position:relative;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -628,7 +647,7 @@ h5 {
 
 .stat-item-container label {
     position: absolute;
-    top:-1px;
+    top: -1px;
     right: 0px;
 }
 
@@ -693,9 +712,9 @@ h5 {
     cursor: pointer;
 }
 
-.weapon-sharpness-container{
+.weapon-sharpness-container {
     position: absolute;
-    top:0px;
+    top: 0px;
     right: 10px;
 }
 
