--- a/webapp/public/style.css
+++ b/webapp/public/style.css
@@ -517,7 +517,7 @@ h5 {
 .deco-container-2 {
     display: flex;
     justify-content: left;
-    margin: 0px 5px 5px 5px;
+    margin: 0px 0px 5px 0px;
     width: 100%;
     height: 35px;
     min-width: 120px;
@@ -774,4 +774,8 @@ h5 {
     border-color: white;
     color: white;
     box-shadow: 0px 0px 10px 2px white;
+}
+
+.talisman-decoration-slot {
+    margin: 0px;
 }
