--- a/webapp/public/style.css
+++ b/webapp/public/style.css
@@ -218,7 +218,7 @@ h5 {
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: red;
+    background-color: transparent;
 }
 
 /********************* Classes *********************/
@@ -280,10 +280,13 @@ h5 {
 }
 
 .logo {
+    display: flex;
+    justify-content: center;
     color: white;
-    margin: 0 50%;
+    margin: 0 auto;
     position: relative;
     top: 5px;
+    left:55px
 }
 
 .sidebar {
